# Fringes

./: .gitignore  .readthedocs.yml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: pytest.yml  python-package.yml
docs/: conf.py  fringes.rst  glossary.txt  index.rst  interdependencies.dot  interdependencies.drawio  modules.rst  readme.txt  references.bib
docs/01_quickstart/: index.rst  usage.rst
docs/03_tutorials/: filter.rst  fundamentals.rst  index.rst  mux.rst  optimal.rst  params.rst  setup.rst  source.rst  trouble.rst
docs/04_api/: index.rst
docs/_build/: .buildinfo  fringes.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html
docs/_build/.doctrees/: environment.pickle  fringes.doctree  index.doctree  modules.doctree  tests.doctree
docs/_build/.doctrees/_source/api_reference/: fringes.doctree  index.doctree  modules.doctree
docs/_build/.doctrees/_source/developer_guide/: index.doctree
docs/_build/.doctrees/_source/getting_started/: background.doctree  index.doctree  inistallation.doctree  installation.doctree  introduction.doctree  usage.doctree
docs/_build/.doctrees/_source/user_guide/: index.doctree  params.doctree
docs/_build/.doctrees/api_reference/: fringes.doctree  index.doctree  modules.doctree
docs/_build/.doctrees/developer_guide/: index.doctree
docs/_build/.doctrees/getting_started/: index.doctree
docs/_build/.doctrees/user_guide/: index.doctree
docs/_build/_modules/: fringes.html  index.html
docs/_build/_modules/fringes/: decoder.html  decoder2.html  decoder3.html  fringes.html  grid.html  util.html
docs/_build/_modules/tests/: test_fringes.html
docs/_build/_source/api_reference/: fringes.html  index.html  modules.html
docs/_build/_source/developer_guide/: index.html
docs/_build/_source/getting_started/: background.html  index.html  inistallation.html  installation.html  introduction.html  usage.html
docs/_build/_source/user_guide/: index.html  params.html
docs/_build/_sources/: index.rst.txt  tests.rst.txt
docs/_build/_sources/_source/developer_guide/: index.rst.txt
docs/_build/_sources/_source/getting_started/: background.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  usage.rst.txt
docs/_build/_sources/_source/user_guide/: index.rst.txt  params.rst.txt
docs/_build/_sources/user_guide/: index.rst.txt
docs/_build/api_reference/: fringes.html  index.html  modules.html
docs/_build/developer_guide/: index.html
docs/_build/getting_started/: index.html
docs/_build/user_guide/: index.html
docs/api_reference/: fringes.rst  index.rst  modules.rst
docs/contributor_guide/: contribute.rst  index.rst
docs/developer_guide/: index.rst
docs/getting_started/: fundamentals.rst  index.rst  install.rst  installation.rst  intro.rst  introduction.rst  usage.rst
docs/readme/: interdependencies.dot  readme.txt
docs/source/: conf.py  index.rst  literature.bib
docs/source/01_start/: index.rst  install.rst  usage.rst
docs/source/02_tutorial/: filter.rst  fundamentals.rst  index.rst  mux.rst  optimal.rst  params.rst  source.pptx  source.rst  trouble.rst
docs/source/02_tutorial/filter/: codomain.py
docs/source/02_tutorial/mux/: gif.py
docs/source/02_tutorial/params/: .$interdependencies - Kopie (2).drawio.bkp  .$interdependencies - Kopie (3).drawio.bkp  interdependencies - Kopie (2).drawio  interdependencies - Kopie (3).drawio  interdependencies - Kopie.drawio  interdependencies_2.dot  interdependencies_3.dot
docs/source/03_api/: fringes.rst  index.rst
docs/source/04_contribute/: contribute.rst
docs/user_guide/: color.rst  filter.rst  index.rst  interdependencies.dot  mux.rst  optimal.rst  params.rst  remap.rst  source.rst  trouble.rst
examples/: colorize.py  curvature.py  decode.py  direct_global.py  encode.py  frequency_division_multiplexing_1.py  frequency_division_multiplexing_2.py  frequency_division_multiplexing_3.py  frequency_division_multiplexing_4.py  record.py  slope.py  spatial_division_multiplexing.py  spatial_wavelength_division_multiplexing.py  verbose.py  visibility_exposure.py  wavelength_division_multiplexing.py
examples/mux/: frequency_division_multiplexing_1.py  frequency_division_multiplexing_2.py  frequency_division_multiplexing_3.py  frequency_division_multiplexing_4.py  spatial_division_multiplexing.py  spatial_wavelength_division_multiplexing.py  wavelength_division_multiplexing.py
fringes/: __init__.py  decoder.py  decoder2.py  decoder3.py  decoder4.py  fringes.py  grid.py  readme.txt  util.py
src/fringes/: __init__.py  __main__.py  decoder.py  decoder2.py  decoder3.py  decoder_.py  decoder_numba.py  filter.py  fringes.py  grid.py  readme.txt  util.py
tests/: test_cli.py  test_examples.py  test_filter.py  test_fringes.py  test_speed.py  test_util.py
