[tool.poetry]
name = "Fringes"
version = "1.1.2"
description = "Phase shifting algorithms for encoding and decoding sinusoidal fringe patterns."
license = "CC-BY-NC-SA-4.0"
authors = ["Christian Kludt"]
readme = "README.md"
repository = "https://github.com/comimag/fringes"
documentation = "https://fringes.readthedocs.io"
keywords = [
    "phase shifting",
    "phase unwrapping",
    "fringe analysis",
    "fringe projection",
    "deflectometry",
    "computational imaging"
]
classifiers = [
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.9,<3.14"  # ensure these python versions are in "/.github/workflows/python-package.yml"
numpy = "^1.23"
numba = "^0.59"
scipy = "^1.8"
scikit-image = "^0.22"
sympy = "^1"
opencv-contrib-python = "^4"
pyyaml = "^6"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
matplotlib = "^3.7.1"

[tool.poetry.group.docs.dependencies]  # ensure the "docs" group is mentioned in ".readthedocs.yml"
sphinx = "^7.1.1"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-rtd-theme = "^3.0.0"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
matplotlib = "^3.7.1"
pytest = "^8.1.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "examples"
